tests/neg/i7359-d.scala
trait SAMTrait
  def first(): String
  def wait(a: Long): Unit // error
